src/k8s/apps/owncloud/middleware-https-redirect.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: owncloud-https-redirect
spec:
  redirectScheme:
    scheme: https
    permanent: true
