src/k8s/apps/owncloud/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: owncloud
  annotations:
    argocd.argoproj.io/sync-wave: "-3"
